# enterprise-mcp

./: .gitignore  README.md  pyproject.toml
enterprise_mcp_venv/: pyvenv.cfg
enterprise_mcp_venv/Scripts/: activate  activate.bat
src/enterprise_mcp/: app.py  config.py  container.py  mcp_server.py
src/enterprise_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/enterprise_mcp/security/: middleware.py  models.py
src/enterprise_mcp/security/auth/: __init__.py  jwt_auth.py  noauth.py  strategy.py
src/security/: models.py
src/security/auth/: jwt_auth.py  middleware.py  noauth.py  strategy.py
tests/: test_auth_mcp.py  test_health.py
