[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-mcp"
version = "0.1.0"
description = "Enterprise MCP Server"
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.25.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.0",
    "httpx>=0.28.0",
    "httpx-sse>=0.4.0",
    "starlette",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-anyio>=0.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
